--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,8 +3,26 @@ main{
 }
 
 h3{
-  padding: 1rem 0
+  padding: 1rem 0;
 }
-.rating span{
-  margin: 0.1rem
+
+h1{
+  font-size: 1.8rem;
+  padding: 1rem 0;
+}
+h2{
+  font-size: 1.4rem;
+  padding: 0.5rem 0;
+}
+/* .rating span {
+   margin: 0.1rem; 
+   margin: 1px; 
+} */
+
+.pd-12{
+  padding: 12px !important
+}
+
+.rating span:last-child{
+  margin: 6px;
 }
