--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,28 +1,45 @@
-main{
+main {
   min-height: 80vh;
 }
 
-h3{
+h3 {
   padding: 1rem 0;
 }
 
-h1{
+h1 {
   font-size: 1.8rem;
   padding: 1rem 0;
 }
-h2{
+
+h2 {
   font-size: 1.4rem;
   padding: 0.5rem 0;
 }
+
 /* .rating span {
    margin: 0.1rem; 
    margin: 1px; 
 } */
 
-.pd-12{
+.pd-12 {
   padding: 12px !important
 }
 
-.rating span:last-child{
+.rating span:last-child {
   margin: 6px;
+}
+
+.btn-shadow0-blur {
+  background-color: gray;
+
+}
+
+.btn-shadow0-blur:focus,
+.btn-shadow0-blur:active {
+  box-shadow: none !important;
+}
+
+.btn-shadow0-blur:hover {
+  background-color: black;
+  transition: 0.1s;
 }
